fixed body limits and scroll overflow

--- a/css/components/body.css
+++ b/css/components/body.css
@@ -1,5 +1,9 @@
 body {
     /* background-color: white ; */
+    position: fixed;
+    top: 10vh;
+    bottom: 5vh;
+    overflow: scroll;
 }
 
 .catalogo {
